Implemented all api methods