@@ -4,15 +4,23 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Named;
 import org.ifmo.soalab2.model.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.List;
+import java.util.*;
 
 @Named
 @ApplicationScoped
 public class Storage {
-    private List<Product> productList = List.of(
+
+    private final ProductOrganization tanyaOrganization = new ProductOrganization(
+            1,
+            "TanyaCo",
+            "TanyaCompany",
+            10000f,
+            ProductOrganization.OrgTypeEnum.COMMERCIAL,
+            new ProductOrganizationPostalAddress("3535")
+    );
+
+
+    private final List<Product> productList = new ArrayList<>(Arrays.asList(
             new Product(
                     "Pelmeni",
                     new ProductCoordinates(10, 20),
@@ -20,16 +28,18 @@ public class Storage {
                     500f,
                     200L,
                     UnitOfMeasure.METERS,
-                    new ProductOrganization(
-                            1,
-                            "TanyaCo",
-                            "TanyaCompany",
-                            10000f,
-                            ProductOrganization.OrgTypeEnum.COMMERCIAL,
-                            new ProductOrganizationPostalAddress("3535")
-                    )
+                    tanyaOrganization
+            ),
+            new Product(
+                    "Pizza",
+                    new ProductCoordinates(10, 20),
+                    new Date(),
+                    500f,
+                    200L,
+                    UnitOfMeasure.METERS,
+                    tanyaOrganization
             )
-    );
+    ));
 
     public Product addProduct(ProductWithoutDate productWithoutDate) {
         Product product = new Product(
@@ -55,11 +65,36 @@ public class Storage {
         return result;
     }
 
+    public List<Product> getProductListWithLessAnnualTurnover(double annualTurnover) {
+        List<Product> result = new ArrayList<>();
+        for (Product product : productList) {
+            if (product.getOrganization().getAnnualTurnover() < annualTurnover) {
+                result.add(product);
+            }
+        }
+        return result;
+    }
+
+    public Product getProductWithMaxUnitOfMaxUnitOfMeasure() {
+        Product productWithMaxUnitOfMeasure = null;
+        for (Product product : productList) {
+            if (productWithMaxUnitOfMeasure == null) {
+                productWithMaxUnitOfMeasure = product;
+            } else if (productWithMaxUnitOfMeasure.getUnitOfMeasure().compareTo(product.getUnitOfMeasure()) < 0) {
+                productWithMaxUnitOfMeasure = product;
+            }
+            ;
+        }
+        return productWithMaxUnitOfMeasure;
+
+    }
+
+
     public List<Product> getProductList() {
         return productList;
     }
 
-    public void removeProduct(int id) {
+    public Product removeProduct(int id) {
         Product productToBeRemoved = null;
         for (Product product : productList) {
             if (product.getId() == id) {
@@ -69,7 +104,35 @@ public class Storage {
         if (productToBeRemoved != null) {
             productList.remove(productToBeRemoved);
         }
+        return productToBeRemoved;
     }
 
+    public Product removeProduct(Long manufactureCost) {
+        Product productToBeRemoved = null;
+        for (Product product: productList) {
+            if (Objects.equals(product.getManufactureCost(), manufactureCost)) {
+                productToBeRemoved = product;
+            }
+        }
+        if (productToBeRemoved != null) {
+            productList.remove(productToBeRemoved);
+        }
+        return productToBeRemoved;
+    }
 
+    public Product updateProductById(ProductWithoutDate productWithoutDate, Integer productId) {
+        Product product = productList.get(productId);
+        if (product == null) {
+            return null;
+        }
+
+        product.setName(productWithoutDate.getName());
+        product.setCoordinates(productWithoutDate.getCoordinates());
+        product.setPrice(productWithoutDate.getPrice());
+        product.setManufactureCost(productWithoutDate.getManufactureCost());
+        product.setUnitOfMeasure(productWithoutDate.getUnitOfMeasure());
+        product.organization(productWithoutDate.getOrganization());
+
+        return product;
+    }
 }
